# play_rummy

./: README.txt  RULES_DE.txt  RULES_DROV.txt  TODO.txt  pyproject.toml  run.ps1
play_rummy/: app.py  exceptions.py  game.py
play_rummy/static/css/: style.css
play_rummy/static/js/: poll_prepared.js  poll_started.js
play_rummy/templates/: error.html  lobbies.html  lobby.html  lobby_create.html  lobby_ended.html  lobby_prepared.html  lobby_started.html  macros.html
tests/: replays.py  runs.py  sets.py  test_play_rummy.py
