[tool.poetry]
name = "play_rummy"
version = "0.1.0"
description = ""
authors = ["Evrim Öztamur <evrimoztamur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
